Kubernetes/deployment-backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: chat-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      name: backend-pod
      namespace: chat-app
      labels:
        app: backend
    spec:
      containers:
      - image: umergulzar223/cahtapp-backend:latest
        name: chatapp-backend
        ports:
        - containerPort: 5001
